<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
<Button android:id="@+id/btnStart" android:layout_width=
    "wrap_content" android:layout_height="wrap_content" 
    android:text="@string/btnStart"></Button>
<Button android:id="@+id/btnSend" android:layout_width=
    "wrap_content" android:layout_height="wrap_content" 
    android:text="@string/btnSend"></Button>
<Button android:id="@+id/btnTest" android:layout_width=
    "wrap_content" android:layout_height="wrap_content"
    android:text="@string/btnTest"></Button>
<Button android:id="@+id/btnTest1" android:layout_width=
    "wrap_content" android:layout_height="wrap_content"
    android:text="@string/btnTest1"></Button>
<EditText
    android:id="@+id/urlText"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:hint="@string/urlText"
    android:inputType="textUri" />
<Button android:id="@+id/submitText" android:layout_width=
    "wrap_content" android:layout_height="wrap_content"
    android:text="@string/submitText"></Button>
<TextView android:id="@+id/textStatus" android:textSize=
    "24sp" android:layout_width="fill_parent" android:layout_height=
    "wrap_content" android:text="@string/textStatus"/>

</LinearLayout>